deps/v8/test/message/fail/weak-refs-register1.out
*%(basename)s:8: TypeError: FinalizationRegistry.prototype.register: target must be an object
fg.register(1);
   ^
TypeError: FinalizationRegistry.prototype.register: target must be an object
    at FinalizationRegistry.register (<anonymous>)
    at *%(basename)s:8:4
